load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

prefix = "github.com/libp2p/go-libp2p-swarm"

# gazelle:prefix github.com/libp2p/go-libp2p-swarm
gazelle(
    name = "gazelle",
    prefix = prefix,
)

go_library(
    name = "go_default_library",
    srcs = [
        "addrs.go",
        "dial_error.go",
        "dial_sync.go",
        "limiter.go",
        "swarm.go",
        "swarm_addr.go",
        "swarm_conn.go",
        "swarm_dial.go",
        "swarm_listen.go",
        "swarm_stream.go",
        "swarm_transport.go",
    ],
    importpath = "github.com/libp2p/go-libp2p-swarm",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ipfs_go_log//:go_default_library",
        "@com_github_jbenet_goprocess//:go_default_library",
        "@com_github_jbenet_goprocess//context:go_default_library",
        "@com_github_libp2p_go_addr_util//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//crypto:go_default_library",
        "@com_github_libp2p_go_libp2p_core//metrics:go_default_library",
        "@com_github_libp2p_go_libp2p_core//mux:go_default_library",
        "@com_github_libp2p_go_libp2p_core//network:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peerstore:go_default_library",
        "@com_github_libp2p_go_libp2p_core//protocol:go_default_library",
        "@com_github_libp2p_go_libp2p_core//transport:go_default_library",
        "@com_github_libp2p_go_libp2p_loggables//:go_default_library",
        "@com_github_libp2p_go_maddr_filter//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_whyrusleeping_multiaddr_filter//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "dial_sync_test.go",
        "dial_test.go",
        "limiter_test.go",
        "peers_test.go",
        "simul_test.go",
        "swarm_addr_test.go",
        "swarm_net_test.go",
        "swarm_notif_test.go",
        "swarm_test.go",
        "transport_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//testing:go_default_library",
        "@com_github_ipfs_go_log//:go_default_library",
        "@com_github_libp2p_go_addr_util//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//network:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peerstore:go_default_library",
        "@com_github_libp2p_go_libp2p_core//test:go_default_library",
        "@com_github_libp2p_go_libp2p_core//transport:go_default_library",
        "@com_github_libp2p_go_libp2p_testing//ci:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_multiformats_go_multiaddr_fmt//:go_default_library",
        "@com_github_multiformats_go_multiaddr_net//:go_default_library",
    ],
)
